# target-google-ads

./: .gitignore  README.md  config.sample.json  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: python-package.yml
sandbox/: target-config.json
target_google_ads/: __init__.py  error_handler.py  google_ads_client.py  google_ads_handler.py  google_ads_offline_conversion.py  utils.py
test/: unittestcore.py
test/data/: combo_300_stream.json  simple_stream.json
test/integration/: test_google_ads_target_IT.py
test/unit/: test.py  test_google_ads_target.py
tests/data/: combo_300_stream.json  npc_per_creation_date_enhanced.json  simple_stream.json
tests/integration/: test_google_ads_target_IT.py
tests/unit/: test_google_ads_target.py
