[tool.poetry]
name = "target-google-ads"
version = "1.0.4"
description = "A Singer (https://singer.io) target that writes data to Google Ads."
authors = ["Deke Li <deke.li@sendinblue.com>"]

[tool.poetry.dependencies]
python = "^3.9"
singer-python = "^5.12.2"
google-ads = "^17.0.0"
requests = "^2.28.0"
protobuf = "3.20.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
